claude: adding instructions for commit messages.